--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "md5": "^2.3.0",
     "openpgp": "^5.5.0",
     "path": "^0.12.7",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-best-gradient-color-picker": "^2.0.17",
     "react-dom": "^18.2.0",
