--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "@emotion/styled": "^11.10.0",
     "@journeyapps/sqlcipher": "^5.3.1",
     "@reduxjs/toolkit": "^1.9.0",
-    "axios": "^0.27.2",
+    "axios": "^1.2.3",
     "browser-image-size": "^1.1.0",
     "compare-versions": "^4.1.3",
     "electron-debug": "^3.2.0",
@@ -145,12 +145,12 @@
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
     "react-lottie-player": "^1.4.3",
-    "react-modal": "^3.15.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.6.0",
     "react-svg": "^15.1.7",
-    "react-toastify": "^9.0.8",
+    "react-toastify": "^9.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -180,10 +180,10 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "detect-port": "^1.3.0",
-    "electron": "^18.2.3",
-    "electron-builder": "^23.6.0",
+    "electron": "20.0.2",
+    "electron-builder": "23.3.0",
     "electron-devtools-installer": "^3.2.0",
-    "electron-notarize": "^1.2.1",
+    "electron-notarize": "^1.2.2",
     "electron-rebuild": "^3.2.7",
     "electronmon": "^2.0.2",
     "eslint": "^8.15.0",
