--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "react-svg": "^15.1.7",
     "react-toastify": "^9.1.1",
     "react-tooltip": "^5.7.1",
+    "react-uuid": "^2.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
