--- a/package.json
+++ b/package.json
@@ -121,10 +121,14 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.9",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@journeyapps/sqlcipher": "^5.3.1",
+    "@radix-ui/react-context-menu": "^2.1.2",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-icons": "^1.2.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@sentry/node": "^7.37.2",
     "@sentry/tracing": "^7.37.2",
@@ -138,7 +142,7 @@
     "elevate-ui": "^1.2.4",
     "enhanced-resolve": "^5.12.0",
     "formik": "^2.2.9",
-    "framer-motion": "^8.5.5",
+    "framer-motion": "^10.0.1",
     "immer": "^9.0.16",
     "md5": "^2.3.0",
     "openpgp": "^5.5.0",
