--- a/package.json
+++ b/package.json
@@ -129,6 +129,8 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-icons": "^1.2.0",
+    "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@sentry/node": "^7.37.2",
     "@sentry/tracing": "^7.37.2",
