--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-radio-group": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.0",
