--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-radio-group": "^1.1.1",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.0",
